spring-app/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: greeting-ingress
spec:
  rules:
    - http:
        paths:
        - path: /goodbye
          backend:
            serviceName: producer-spring-app
            servicePort: 9080
        - path: /greeting
          backend:
            serviceName: consumer-spring-app
            servicePort: 80
